--- a/becomehost.html
+++ b/becomehost.html
@@ -86,7 +86,7 @@
 		
 		<footer style="text-align:right;padding-right:20px;">				
 			<div class="" style="float:left;width:20%;">
-				<a href="#"><img src="img/explore.png" alt="" style="width:100%;height:100%;"></a>
+				<a href="next.html"><img src="img/explore.png" alt="" style="width:100%;height:100%;"></a>
 			</div>
 			<div class="" style="float:left;width:20%;">
 				<a href="favorite.html"><img src="img/favorite.png" alt="" style="width:100%;height:100%;"><br></a>
@@ -95,7 +95,7 @@
 				<a href="history.html"><img src="img/history.png" alt="" style="width:100%;height:100%;"><br></a>
 			</div>
 			<div class="" style="float:left;width:20%;">
-				<a href="becomehost.html"><img src="img/inbox_active.png" alt="" style="width:100%;height:100%;"><br></a>
+				<a href="#"><img src="img/inbox_active.png" alt="" style="width:100%;height:100%;"><br></a>
 			</div>
 			<div class="" style="float:left;width:20%;">
 				<a href="profile.html"><img src="img/profile.png" alt="" style="width:100%;height:100%;"><br></a>
