--- a/host.html
+++ b/host.html
@@ -151,7 +151,7 @@
 				<p align="left" style="margin-top:60px;margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:relative;color:gray;">Bathrooms</p>
 				<div id="guest" style="width:auto height:auto; margin-left:20px;position:absolute">
 					<div id="plusButton" style="width:2em;height:2em;position:relative;border-radius:50px;margin-top:5px;background-image:url(img/min.png);background-size:cover;repeat:no-repeat;float:left;"></div>
-					<input type="text" id="txtNumberBeds" name="numberBeds" value="1" style="width:60%;float:left;position:relative">
+					<input type="text" id="txtNumberBaths" name="numberBaths" value="1" style="width:60%;float:left;position:relative">
 					<div id="plusButton" style="width:2em;height:2em;position:relative;margin-left:20px;margin-top:5px;border-radius:50px;background-image:url(img/add.png);background-size:cover;repeat:no-repeat;float:left;"></div>
 				</div>
 				<p align="left" style="margin-top:60px;margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:relative;color:gray;">About this House</p>
@@ -163,7 +163,7 @@
 					<div id="plusButton" style="width:2em;height:2em;position:relative;margin-left:20px;margin-top:5px;border-radius:50px;background-image:url(img/add.png);background-size:cover;repeat:no-repeat;float:left;"></div>
 				</div>
 				<p align="left" style="margin-top:70px;margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:relative;color:gray;">Photos</p>
-				<input type="file" name="txtPhone" value="" style="width:90%;height:100px;position:absolute;left:0px;margin-left:20px;"><br>
+				<input type="file" id="fileUploadHome" name="uploadHome" value="" style="width:90%;height:100px;position:absolute;left:0px;margin-left:20px;"><br>
 		</div>
 		
 		<footer style="text-align:right;padding-right:20px;">
