list home hosted

--- a/host.html
+++ b/host.html
@@ -167,7 +167,7 @@
 		</div>
 		
 		<footer style="text-align:right;padding-right:20px;">
-				<input type="button" name="btnHosting" value="Host" style="width:30%;height:60%;background-color:#f94d6e;border-radius:10px;font-size:1.5em;color:white;top:20%;position:relative;">
+				<input type="button" id="btnHosting" name="hosting" value="Host" style="width:30%;height:60%;background-color:#f94d6e;border-radius:10px;font-size:1.5em;color:white;top:20%;position:relative;">
 			</form>
 		</footer>
   </ons-page>
