--- a/manage_home.html
+++ b/manage_home.html
@@ -168,8 +168,8 @@
 		</div>
 		
 		<footer style="text-align:right;padding-right:20px;">
-				<input type="button" name="btnUpdate" value="Update" style="width:30%;height:60%;background-color:#f94d6e;border-radius:10px;font-size:1.5em;color:white;top:20%;position:relative;">
-				<input type="button" name="btnDelete" value="Delete" style="width:30%;height:60%;background-color:white;border-radius:10px;font-size:1.5em;color:#f94d6e;top:20%;position:relative;">
+				<input type="button" id="btnUpdate" name="update" value="Update" style="width:30%;height:60%;background-color:#f94d6e;border-radius:10px;font-size:1.5em;color:white;top:20%;position:relative;">
+				<input type="button" id="btnDelete" name="delete" value="Delete" style="width:30%;height:60%;background-color:white;border-radius:10px;font-size:1.5em;color:#f94d6e;top:20%;position:relative;">
 			</form>
 		</footer>
   </ons-page>
