--- a/edit_profile.html
+++ b/edit_profile.html
@@ -98,6 +98,8 @@
 				</select><br>
 				<p align="left" style="margin-top:30px;margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:relative;color:gray;">Date of Birth</p>
 				<input type="date" name="dateDoB" min="1980-01-01" value="1997-12-01"><br>
+				<p align="left" style="margin-top:30px;margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:relative;color:gray;">Telephone</p>
+				<input type="text" placeholder="Telephone" name="telp" id="txtTelp"><br>
 		</div>
 		
 		<footer style="text-align:right;padding-right:20px;">
