call host, tambahin address di edit

--- a/detail.html
+++ b/detail.html
@@ -149,7 +149,7 @@
 			<p class="isiDetail" style="font-size:1em;font-weight:none;">Comfy little home for family holiday. Another facilities are kitchen, air conditioner in every room, refrigerator, and pantry.</p>
 		</div>
 		<hr>
-		<a href='#' style="font-style:none;color:black;"><h5 style="margin-left:10px;">Contact Host</h5></a>
+		<a href='call_host.html' style="font-style:none;color:black;"><h5 style="margin-left:10px;">Contact Host</h5></a>
 		<hr>
 		<h5 style="margin-left:10px;">Reviews</h5>
 		<div id="reviews" style="margin-left:10px;font-family:AgencyFB;height:auto;width:95%;margin-bottom:10px;">			
