--- a/call_host.html
+++ b/call_host.html
@@ -78,47 +78,23 @@
         </div>
         </ons-toolbar>
 		
-		<div class="contProfile" style="width:100%;height:auto;margin-bottom:100px;">
-			<form method='post' class="editProf" align="left">			
-				<div class="fotoProfile" style="width:100px;height:100px;position:relative;margin:auto;margin-top:20px;border-radius:50px;background-image:url(img/kenji.jpg);background-size:cover;repeat:no-repeat;margin-bottom:10px;"></div>
-				<p id="changePhoto" align="center" style="font-family:AgencyFB;font-size:1em;font-weight:none;position:relative;color:#f94d6e" onclick="upload()">Change Photo</p>
-				<input type="file" name="profileUpload" id="UploadPhoto" style="display:none">
-				<p align="center" style="font-family:AgencyFB;font-size:1em;font-weight:none;position:relative;">Member since August 2017</p>
-				<p align="left" style="margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;color:gray;">Full name</p>
-				<input type="text" id="txtName" name="fullname" value="Kenji Andrean"><br>
-				<p align="left" style="margin-top:30px;margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:relative;color:gray;">Email</p>
-				<input type="email" id="txtEmail" name="email" value="kenjiandrean@gmail.com"><br>
-				<p align="left" style="margin-top:30px;margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:relative;color:gray;">Password</p>
-				<input type="password" id="txtPassword" name="password" value="1234asdf"><br>
-				<p align="left" style="margin-top:30px;margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:relative;color:gray;">Gender</p>
-				<select id="comboGenderEditProf" name="cmbGender" placeholder="Gender" style="height:3em">
-					<option value="-" selected disabled>Gender</option>
-					<option value="Female">Female</option>
-					<option value="Male">Male</option>
-				</select><br>
-				<p align="left" style="margin-top:30px;margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:relative;color:gray;">Date of Birth</p>
-				<input type="date" id="datepickerDoB" name="dateDoB" min="1980-01-01" value="1997-12-01"><br>
-				<p align="left" style="margin-top:30px;margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:relative;color:gray;">Telephone</p>
-				<input type="text" placeholder="Telephone" name="telp" id="txtTelp"><br>
-				<p align="left" style="margin-top:30px;margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:relative;color:gray;">Address</p>
-				<input type="text" id="txtAddress" name="address" value="Kenji Andrean"><br>
+		<div class="contProfile" style="width:100%;height:100%;margin-top:-20px;background-image:url(img/call.jpg);background-size:cover;repeat:no-repeat;">
+			<form method='post' class="editProf" align="left">
+				<label id="txtPhoneNumber" name="phoneHost" for="085102100000" style="width:auto;height:40px;border-radius:10px;font-size:1.3em;position:absolute;top:60%;left:20%;color:#f94d6e">085102100000</label>
+			</form>
 		</div>
 		
-		<footer style="text-align:right;padding-right:20px;">
-				<input type="button" name="btnBooking" value="Save" style="width:30%;height:60%;background-color:#f94d6e;border-radius:10px;font-size:1.5em;color:white;top:20%;position:relative;">
+		<footer>
+			<div class="price" style="text-align:left;margin-top:10px;margin-left:10px;font-size:1.5em;font-weight:bold;float:left">Rp. 10.250.000,00</div><div style="float:left;text-align:left;font-size:1em;margin-top:15px;margin-left:5px;">per night</div>
+			<div class="captReview" style="font-size:1em;margin-left:10px;clear:both;position:absolute;bottom:10px;">Rates 4 of 5</div>
+			<form class="buatDetail" method='post' style="text-align:right;padding-right:10px;">
+				<input type="button" name="btnBooking" value="Check Availability" style="height:60%;background-color:#f94d6e;border-radius:10px;font-size:1em;color:white;margin-top:10px;">
 			</form>
 		</footer>
   </ons-page>
   </template>
-	</body>	
-	
+	</body>
   <script type="text/javascript">
-	
-	function upload(){
-		$("#UploadPhoto").click();
-	}
-  
-  
   var server = "http://workastation.hol.es/sdpajax/server.php";
   function getIp() {
       ons.notification.prompt({message: 'Masukkan ip server'}).then(function(answer) {
@@ -150,9 +126,8 @@
           // navigator.vibrate([300, 10, 150, 10, 150]);
       });
       $(document).ready(onDeviceReady());
-	  
     function onDeviceReady(){
-      //getIp();		
+      //getIp();
       $.post(server, {'user': localStorage.getItem("storageName"), 'tipe': 3},function(data){
         data = JSON.parse(data);
         cordova.plugins.notification.local.schedule({
