--- a/profile.html
+++ b/profile.html
@@ -14,16 +14,16 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-		
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>		
+
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
 		<script type="text/javascript" src="jquery-ui-1.12.1.custom/jquery-ui.js"></script>
 		<script type="text/javascript" src="jquery-ui-1.12.1.custom/jquery.ui.touch-punch.min.js"></script>
-		
+
 		<link rel="stylesheet" href="node_modules/onsenui/css/onsenui.css">
 		<link rel="stylesheet" href="node_modules/onsenui/css/onsen-css-components.min.css">
-		
+
 		<script>
 			$(function() {
 				$("#banner > div:gt(0)").hide();
@@ -37,14 +37,14 @@
 				},  3000);
 			});
 		</script>
-		
+
 		<style>
 		  .carousel-inner > .item > img,
 		  .carousel-inner > .item > a > img{
 			  width: 100%;
 			  margin: auto;
 		  }
-	  </style>	
+	  </style>
 	</head>
 
 	<body>
@@ -77,11 +77,11 @@
           Go & Rent
         </div>
         </ons-toolbar>
-		
+
 		<div class="contProfile" style="width:100%;height:40%;background-color:#f94d6e;">
 			<div class="fotoProfile" style="width:100px;height:100px;position:relative;margin:auto;top:20%;border-radius:50px;background-image:url(img/kenji.jpg);background-size:cover;repeat:no-repeat;margin-bottom:60px;"></div>
-			<p align="center" style="margin-left:10px;font-family:AgencyFB;font-size:1.5em;font-weight:bold;position:relative;color:white">Kenji Andrean</p>
-			<p align="center" style="font-family:AgencyFB;font-size:1em;font-weight:none;position:relative;color:white">Member since August 2017</p>
+			<p id="fullname" align="center" style="margin-left:10px;font-family:AgencyFB;font-size:1.5em;font-weight:bold;position:relative;color:white">Kenji Andrean</p>
+			<p id="sincejoin" align="center" style="font-family:AgencyFB;font-size:1em;font-weight:none;position:relative;color:white">Member since August 2017</p>
 		</div>
 		<div class="menuProfile" style="width:100%;height:auto;">
 			<hr>
@@ -90,7 +90,7 @@
 			<a href="feedback.html" style="font-style:none"><div class="listMenuProfile" style="margin-left:20px;font-size:1.5em;font-family:AgencyFB;color:gray;">Give us Feedback</div></a>
 			<hr>
 		</div>
-		
+
 		<footer>
 			<div class="" style="float:left;width:20%;">
         <a href="next.html"><img src="img/explore.png" alt="" style="width:100%;height:100%;"></a>
@@ -112,117 +112,20 @@
   </template>
 	</body>
   <script type="text/javascript">
-  var server = "http://workastation.hol.es/sdpajax/server.php";
-  function getIp() {
-      ons.notification.prompt({message: 'Masukkan ip server'}).then(function(answer) {
-          if(answer.trim() == '')
-              getIp();
-          else {
-              server += answer;
-              server += '/sdpajax/server.php';
-          }
-      });
-  }
+  var ini ;
+  var server = "http://192.168.1.3/sdpajax/server.php";
     document.addEventListener("deviceready", onDeviceReady, false);
-    ons.ready(function() {
-          /*getIp();
-          $.post(server, {'user': 'timo', 'tipe': 2},function(data){
-            cordova.plugins.notification.local.schedule({
-                id: 10,
-                title: "Berhasil Login",
-                text: "Halo "+data['nama']+"!"
-            });
-          });
-
-          // makeNotification(0, 'ini title', 'ini isi dari text');
-          /*cordova.plugins.notification.local.on("click", function(notification) {
-              cordova.plugins.notification.local.clearAll();
-          });*/
-
-
-          // navigator.vibrate([300, 10, 150, 10, 150]);
-      });
-      $(document).ready(onDeviceReady());
+      $(document).ready(onDeviceReady);
     function onDeviceReady(){
-      //getIp();
-      $.post(server, {'user': localStorage.getItem("storageName"), 'tipe': 3},function(data){
+      ini = localStorage.getItem("storageName") != null ? localStorage.getItem("storageName") : "tm_tr" ;
+      $.post(server, {'userskr' : ini ,'tipe': "selectProfile"},function(data){
         data = JSON.parse(data);
-        cordova.plugins.notification.local.schedule({
-            id: 5,
-            title: "Berhasil Login",
-            text: "Halo "+data['name']+"!"
-        });
+        console.log(data);
+        $("#fullname").html(data.nama_user);
+        $("#sincejoin").html("Member since "+data.since);
+        $(".fotoProfile").css("background-image","url('"+data.picture_user+"')");
       });
-
     };
-  function myfunc(){
-    window.plugins.googleplus.login({},function (obj) {
-      alert(JSON.stringify(obj)); // do something useful instead of alerting
-    },
-    function (msg) {
-      alert('error: ' + msg);
-    });
-  };
-  function myfuncfb(){
-    var fbLoginSuccess = function(result){
-    //calling api after login success
-    facebookConnectPlugin.api("/me?fields=email,name,birthday",['email','user_birthday','public_profile'],function(userData){
-    //API success callback
-      alert("User Info : "+userData.email+"\n Hello ! Our Beloved : "+userData.name +"\n We Want to Remind You that your Birthday is : "+userData.birthday);
-      },function(error){
-    //API error callback
-      alert(JSON.stringify(error));
-      });
-    }
-    //alert("user Info : "+userData.name+" Hello "+userData.email);
-    //document.getElementById("cobaAjax").innerHTML=JSON.stringify(userData);
-    //alert("UserInfo: "+userData['email'] + "\n Hello "+userData['name']+" Good to see you");
-    //};
-    facebookConnectPlugin.login(['email','user_birthday','public_profile'], fbLoginSuccess,
-    function loginError (error) {
-    alert(JSON.stringify(error));
-  });
-  };
-  function onBackKeyDown(){
-    makeNotification();
-    $.post(server, {'chat': chat, 'nama': nama, 'tipe': 2});
-
-    var x = confirm("Are you sure ?");
-    window.plugins.googleplus.disconnect(
-      function (msg) {
-        alert("Berhasil Logout Google"); // do something useful instead of alerting
-      },function (msg) {
-        alert("Gagal Logout Google"); // do something useful instead of alerting
-        x=false;
-        alert(msg);
-
-      }
-    );
-    facebookConnectPlugin.api("/me/permissions?method=delete", ['email','user_birthday','public_profile'],function (msg) {
-      alert("Berhasil Logout  Facebook"); // do something useful instead of alerting
-    }, function (msg) {
-      alert("Gagal Logout Facebook"); // do something useful instead of alerting
-      x=false;
-      alert(msg);
-    });
-    facebookConnectPlugin.logout(function (msg) {
-      alert("Berhasil Logout  Facebook"); // do something useful instead of alerting
-    }, function (msg) {
-      alert("Gagal Logout Facebook"); // do something useful instead of alerting
-      x=false;
-      alert(msg);
-    });
-
-    if(x){
-      if (navigator.app) {
-          navigator.app.exitApp();
-      } else if (navigator.device) {
-          navigator.device.exitApp();
-      } else {
-          window.close();
-      }
-    }
-  }
   window.fn = {};
     window.fn.open = function() {
         let menu = document.getElementById('menu');
