tak ganti di div tp function e kepanggil lek double click

--- a/edit_profile.html
+++ b/edit_profile.html
@@ -81,9 +81,9 @@
 		<div class="contProfile" style="width:100%;height:auto;margin-bottom:100px;">
 			<form method='post' class="editProf" align="left">			
 				<div class="fotoProfile" style="width:100px;height:100px;position:relative;margin:auto;margin-top:20px;border-radius:50px;background-image:url(img/kenji.jpg);background-size:cover;repeat:no-repeat;margin-bottom:10px;"></div>
-				<p id="changePhoto" align="center" style="font-family:AgencyFB;font-size:1em;font-weight:none;position:relative;color:#f94d6e" onclick="upload()">Change Photo</p>
+				<div id="changePhoto" style="height:20px;font-family:AgencyFB;font-size:1.3em;font-weight:none;position:relative;color:#f94d6e;margin-bottom:10px;" onclick="upload()"><p align="center" >Change Photo</p></div>
 				<input type="file" name="profileUpload" id="UploadPhoto" style="display:none">
-				<p align="center" style="font-family:AgencyFB;font-size:1em;font-weight:none;position:relative;">Member since August 2017</p>
+				<p align="center" style="font-family:AgencyFB;font-size:1.3em;font-weight:none;position:relative;">Member since August 2017</p>
 				<p align="left" style="margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;color:gray;">Full name</p>
 				<input type="text" id="txtName" name="fullname" value="Kenji Andrean"><br>
 				<p align="left" style="margin-top:30px;margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:relative;color:gray;">Email</p>
@@ -99,8 +99,8 @@
 				<p align="left" style="margin-top:30px;margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:relative;color:gray;">Date of Birth</p>
 				<input type="date" id="datepickerDoB" name="dateDoB" min="1980-01-01" value="1997-12-01"><br>
 				<p align="left" style="margin-top:30px;margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:relative;color:gray;">Telephone</p>
-				<input type="text" placeholder="Telephone" name="telp" id="txtTelp"><br>
 				<p align="left" style="margin-top:30px;margin-left:20px;font-family:AgencyFB;font-size:1.5em;font-weight:none;position:relative;color:gray;">Address</p>
+				<input type="text" placeholder="Telephone" name="telp" id="txtTelp"><br>
 				<input type="text" id="txtAddress" name="address" value="Kenji Andrean"><br>
 		</div>
 		
