--- a/call_host.html
+++ b/call_host.html
@@ -80,7 +80,7 @@
 		
 		<div class="contProfile" style="width:100%;height:100%;margin-top:-20px;background-image:url(img/call.jpg);background-size:cover;repeat:no-repeat;">
 			<form method='post' class="editProf" align="left">
-				<label id="txtPhoneNumber" name="phoneHost" for="085102100000" style="width:auto;height:40px;border-radius:10px;font-size:1.3em;position:absolute;top:60%;left:20%;color:#f94d6e">085102100000</label>
+				<input type="text" id="txtPhoneNumber" name="phoneHost" value="085102100000" style="width:40%;height:40px;border-radius:10px;font-size:1.3em;position:absolute;top:60%;left:10%;color:#f94d6e;text-align:center;" readonly>
 			</form>
 		</div>
 		
