--- a/favorite.html
+++ b/favorite.html
@@ -68,7 +68,7 @@
 				<div class="detailFavorite" style="display:inline-block;">
 					<div class="img-feature"><center><img src='img/home.jpg' style="width:100%;height:100%;"></center></div>
 					<div class="content">
-						<h5><b>Kebab Kings, ...</b></h5>
+						<h5><b>Kebab Kings, Dhar...</b></h5>
 						<span style="font-size: 0.8em">12.00 - 22.00 &bull; 2.29 km</span>
 					</div>
 				</div>
