--- a/profile.html
+++ b/profile.html
@@ -123,7 +123,8 @@
         console.log(data);
         $("#fullname").html(data.nama_user);
         $("#sincejoin").html("Member since "+data.since);
-        $(".fotoProfile").css("background-image","url('"+data.picture_user+"')");
+        var isipic = data.picture_user[5] == ":" ? data.picture_user : "http://192.168.1.3/sdpajax/"+data.picture_user;
+        $(".fotoProfile").css("background-image","url('"+isipic+"')");
       });
     };
   window.fn = {};
