href check avail sama new host sama get started sudah di link

--- a/becomehost.html
+++ b/becomehost.html
@@ -53,7 +53,7 @@
       <ons-splitter-side id="menu" side="left" width="220px" swipe-target-width="125px" collapse swipeable >
         <ons-page>
           <ons-list id="chatMember">
-            <ons-list-header><img src='logo.png' width='70%'>Menu</ons-list-header>
+            <ons-list-header><img src='logo.png' width='70%'></ons-list-header>
             <a href="next.html" style="text-decoration:none;"><ons-list-item class="mentionBtn" tappable>Home</ons-list-item></a>
             <ons-list-item class="mentionBtn" tappable>About</ons-list-item>
             <a href="profile.html" style="text-decoration:none;"><ons-list-item class="mentionBtn" tappable>Profile</ons-list-item></a>
@@ -80,7 +80,7 @@
 		
 		<div class="contProfile" style="width:100%;height:100%;margin-top:-20px;background-image:url(img/host.jpg);background-size:cover;repeat:no-repeat;">
 			<form method='post' class="editProf" align="left">
-				<input type="button" name="btnStart" value="Get Started" style="width:auto;height:40px;background-color:#f94d6e;border-radius:10px;font-size:1.3em;color:white;position:absolute;bottom:80px;right:20px;">
+				<a href="host.html" style="text-decoration:none"><input type="button" name="btnStart" value="Get Started" style="width:auto;height:40px;background-color:#f94d6e;border-radius:10px;font-size:1.3em;color:white;position:absolute;bottom:80px;right:20px;"></a>
 			</form>
 		</div>
 		
