--- a/call_host.html
+++ b/call_host.html
@@ -53,7 +53,7 @@
       <ons-splitter-side id="menu" side="left" width="220px" swipe-target-width="125px" collapse swipeable >
         <ons-page>
           <ons-list id="chatMember">
-            <ons-list-header><img src='logo.png' width='70%'>Menu</ons-list-header>
+            <ons-list-header><img src='logo.png' width='70%'></ons-list-header>
             <a href="next.html" style="text-decoration:none;"><ons-list-item class="mentionBtn" tappable>Home</ons-list-item></a>
             <ons-list-item class="mentionBtn" tappable>About</ons-list-item>
             <a href="profile.html" style="text-decoration:none;"><ons-list-item class="mentionBtn" tappable>Profile</ons-list-item></a>
@@ -88,7 +88,7 @@
 			<div class="price" style="text-align:left;margin-top:10px;margin-left:10px;font-size:1.5em;font-weight:bold;float:left">Rp. 10.250.000,00</div><div style="float:left;text-align:left;font-size:1em;margin-top:15px;margin-left:5px;">per night</div>
 			<div class="captReview" style="font-size:1em;margin-left:10px;clear:both;position:absolute;bottom:10px;">Rates 4 of 5</div>
 			<form class="buatDetail" method='post' style="text-align:right;padding-right:10px;">
-				<input type="button" name="btnBooking" value="Check Availability" style="height:60%;background-color:#f94d6e;border-radius:10px;font-size:1em;color:white;margin-top:10px;">
+				<a href="avail.html" style="text-decoration:none"><input type="button" name="btnBooking" value="Check Availability" style="height:60%;background-color:#f94d6e;border-radius:10px;font-size:1em;color:white;margin-top:10px;"></a>
 			</form>
 		</footer>
   </ons-page>
