--- a/list_home.html
+++ b/list_home.html
@@ -30,7 +30,7 @@
       <ons-splitter-side id="menu" side="left" width="220px" swipe-target-width="125px" collapse swipeable >
         <ons-page>
           <ons-list id="chatMember">
-            <ons-list-header><img src='logo.png' width='70%'>Menu</ons-list-header>
+            <ons-list-header><img src='logo.png' width='70%'></ons-list-header>
             <a href="next.html" style="text-decoration:none;"><ons-list-item class="mentionBtn" tappable>Home</ons-list-item></a>
             <ons-list-item class="mentionBtn" tappable>About</ons-list-item>
             <a href="profile.html" style="text-decoration:none;"><ons-list-item class="mentionBtn" tappable>Profile</ons-list-item></a>
@@ -116,7 +116,7 @@
 
        <footer>
 			<form method='post' class="editProf" align="left">
-				<input type="button" id="btnNew" name="new" value="New" style="width:30%;height:60%;background-color:#f94d6e;border-radius:10px;font-size:1.5em;color:white;position:absolute;margin-top:10px;right:20px;">			
+				<a href="host.html" style="text-decoration:none"><input type="button" id="btnNew" name="new" value="New" style="width:30%;height:60%;background-color:#f94d6e;border-radius:10px;font-size:1.5em;color:white;position:absolute;margin-top:10px;right:20px;"></a>		
 			</form>
 		</footer>
   </ons-page>
