--- a/see_more.html
+++ b/see_more.html
@@ -29,7 +29,7 @@
       <ons-splitter-side id="menu" side="left" width="220px" swipe-target-width="125px" collapse swipeable >
         <ons-page>
           <ons-list id="chatMember">
-            <ons-list-header><img src='logo.png' width='70%'>Menu</ons-list-header>
+            <ons-list-header><img src='logo.png' width='70%'></ons-list-header>
             <a href="next.html" style="text-decoration:none;"><ons-list-item class="mentionBtn" tappable>Home</ons-list-item></a>
             <ons-list-item class="mentionBtn" tappable>About</ons-list-item>
             <a href="profile.html" style="text-decoration:none;"><ons-list-item class="mentionBtn" tappable>Profile</ons-list-item></a>
