--- a/detail.html
+++ b/detail.html
@@ -55,7 +55,7 @@
           <ons-list id="chatMember">
             <ons-list-header><img src='logo.png' width='70%'></ons-list-header>
             <a href="next.html" style="text-decoration:none;"><ons-list-item class="mentionBtn" tappable>Home</ons-list-item></a>
-            <ons-list-item class="mentionBtn" tappable>About</ons-list-item>
+            <a href="about.html" style="text-decoration:none;"><ons-list-item class="mentionBtn" tappable>About</ons-list-item></a>
             <a href="profile.html" style="text-decoration:none;"><ons-list-item class="mentionBtn" tappable>Profile</ons-list-item></a>
             <ons-list-item class="mentionBtn" tappable>Support</ons-list-item>
             <ons-list-item style="position:absolute;overflow:hidden;bottom:0;" class="mentionBtn" onclick="onBackKeyDown()" tappable>Logout</ons-list-footer>
@@ -142,7 +142,7 @@
 		<hr>
 		<div id="aboutHome" style="margin-left:10px;font-family:AgencyFB;height:auto;width:95%;margin-bottom:20px;">
 			<h5>About this House</h5>
-			<p class="isiDetail" style="font-size:1em;font-weight:none;">Comfy little home for family holiday. Another facilities are kitchen, air conditioner in every room, refrigerator, and pantry.</p>
+			<p class="isiDetail" style="font-size:1em;font-weight:none;margin-right:10px;">Comfy little home for family holiday. Another facilities are kitchen, air conditioner in every room, refrigerator, and pantry.</p>
 		</div>
 		<hr>
 		<a href='call_host.html' style="font-style:none;color:black;"><h5 style="margin-left:10px;">Contact Host</h5></a>
@@ -156,7 +156,7 @@
 				<div class="namaUser" style="width:auto;height:auto;position:relative;font-size:1.5em;font-family:AgencyFB;float:none;">Timo Tirtawan</div>
 				<div class="tglReview" style="width:auto;height:auto;position:relative;font-size:1em;font-family:HNLight;float:none;color:lightgray;font-weight:none;">November 2017</div>
 			</div>
-			<div class="isiReview" style="width:auto;height:auto;margin-top:10px;position:relative;font-size:1em;font-family:HNLight;float:none;color:black;font-weight:none;clear:both;">WILL do next! If they had at the Caterpillar's making such VERY short remarks, and she walked on in a few minutes she heard her voice close to them, and all the first figure,' said the Mouse. 'Of course,' the Dodo solemnly, rising to its feet, ran round the court and got behind Alice as she came in sight of the e--e--evening, Beautiful, beautiful Soup!' CHAPTER XI. Who Stole the Tarts? The King and Queen of Hearts, she made it out to her daughter 'Ah, my dear! Let this be a book written about.</div>
+			<div class="isiReview" style="width:auto;height:auto;margin-top:10px;position:relative;font-size:1em;font-family:HNLight;float:none;color:black;font-weight:none;clear:both; margin-right:10px;">WILL do next! If they had at the Caterpillar's making such VERY short remarks, and she walked on in a few minutes she heard her voice close to them, and all the first figure,' said the Mouse. 'Of course,' the Dodo solemnly, rising to its feet, ran round the court and got behind Alice as she came in sight of the e--e--evening, Beautiful, beautiful Soup!' CHAPTER XI. Who Stole the Tarts? The King and Queen of Hearts, she made it out to her daughter 'Ah, my dear! Let this be a book written about.</div>
 			<hr>
 			<div class="kiri" style="width:20%;height:auto;float:left;margin-right:20px;margin-left:10px;">
 				<div class="fotoUser" style="width:50px;height:50px;position:relative;border-radius:50px;background-image:url(img/kenji.jpg);background-size:cover;repeat:no-repeat;float:left"></div>
@@ -165,10 +165,10 @@
 				<div class="namaUser" style="width:auto;height:auto;position:relative;font-size:1.5em;font-family:AgencyFB;float:none;">Timo Tirtawan</div>
 				<div class="tglReview" style="width:auto;height:auto;position:relative;font-size:1em;font-family:HNLight;float:none;color:lightgray;font-weight:none;">November 2017</div>
 			</div>
-			<div class="isiReview" style="width:auto;height:auto;margin-top:10px;position:relative;font-size:1em;font-family:HNLight;float:none;color:black;font-weight:none;clear:both;">WILL do next! If they had at the Caterpillar's making such VERY short remarks, and she walked on in a few minutes she heard her voice close to them, and all the first figure,' said the Mouse. 'Of course,' the Dodo solemnly, rising to its feet, ran round the court and got behind Alice as she came in sight of the e--e--evening, Beautiful, beautiful Soup!' CHAPTER XI. Who Stole the Tarts? The King and Queen of Hearts, she made it out to her daughter 'Ah, my dear! Let this be a book written about.</div>
+			<div class="isiReview" style="width:auto;height:auto;margin-top:10px;position:relative;font-size:1em;font-family:HNLight;float:none;color:black;font-weight:none;clear:both; margin-right:10px;">WILL do next! If they had at the Caterpillar's making such VERY short remarks, and she walked on in a few minutes she heard her voice close to them, and all the first figure,' said the Mouse. 'Of course,' the Dodo solemnly, rising to its feet, ran round the court and got behind Alice as she came in sight of the e--e--evening, Beautiful, beautiful Soup!' CHAPTER XI. Who Stole the Tarts? The King and Queen of Hearts, she made it out to her daughter 'Ah, my dear! Let this be a book written about.</div>
 			<hr>
 		</div>
-		<p style="margin-left:10px;margin-bottom:80px;font-size:1em;">Exact location information is provided after a booking is confirmed.</p>
+		<p style="margin-left:10px;margin-bottom:80px;font-size:1em; margin-right:10px;">Exact location information is provided after a booking is confirmed.</p>
 		<footer>
 			<div class="price" style="text-align:left;margin-top:10px;margin-left:10px;font-size:1.5em;font-weight:bold;float:left">Rp. 10.250.000,00</div><div style="float:left;text-align:left;font-size:1em;margin-top:15px;margin-left:5px;">per night</div>
 			<div class="captReview" style="font-size:1em;margin-left:10px;clear:both;position:absolute;bottom:10px;">Rates 4 of 5</div>
